bredcrume top spacing fixed

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -798,3 +798,8 @@ border: 1px solid #d2d5d6;
 box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
 margin-bottom:30px;
 }
+.easy-breadcrumb{
+ .region-breadcrumb{
+   margin-top: -120px;
+ }
+}
